@@ -20,6 +20,9 @@ bzr-svn 0.4.4	UNRELEASED
 
    * Handle long file names with unicode characters correctly on python2.4 (#129334)
 
+   * Give proper warning message when running 'bzr svn-branching-scheme' on 
+     something that is not a Subversion repository. (#145159)
+
   DOCUMENTATION
 
    * Add simple FAQ file. (#144388)
